force-app/main/default/objects/News_Article__c/News_Article__c.object-meta.xml
<CustomObject>
    <label>News Article</label>
    <nameField>
        <label>Headline</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>