force-app/main/default/objects/News_Article__c/fields/Article_Date__c.field-meta.xml
<CustomField>
    <fullName>Article_Date__c</fullName>
    <label>Article Date</label>
    <type>DateTime</type>
</CustomField>