force-app/main/default/objects/News_Article__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Game Recap</fullName>
            </value>
            <value>
                <fullName>Injury Update</fullName>
            </value>
            <value>
                <fullName>Conference Tournament</fullName>
            </value>
            <value>
                <fullName>Expert Analysis</fullName>
            </value>
            <value>
                <fullName>Bracket Projection</fullName>
            </value>
            <value>
                <fullName>General News</fullName>
            </value>
            <value>
                <fullName>Transfer Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>