force-app/main/default/objects/News_Article__c/fields/Full_Content__c.field-meta.xml
<CustomField>
    <fullName>Full_Content__c</fullName>
    <label>Full Content</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>