force-app/main/default/objects/News_Article__c/fields/Grounding_Sources__c.field-meta.xml
<CustomField>
    <fullName>Grounding_Sources__c</fullName>
    <label>Grounding Sources</label>
    <description>Cited web sources from Google Search grounding</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>