force-app/main/default/objects/News_Article__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <description>URL to the article header image from ESPN or other verified source</description>
    <type>Url</type>
</CustomField>