force-app/main/default/objects/News_Article__c/fields/Is_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Verified__c</fullName>
    <label>Verified Source</label>
    <description>Whether this article comes from a verified real-world source (ESPN, Google Search grounded) vs AI-generated</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>