force-app/main/default/objects/News_Article__c/fields/Relevance_Score__c.field-meta.xml
<CustomField>
    <fullName>Relevance_Score__c</fullName>
    <label>Relevance Score</label>
    <description>0-100 how relevant to tournament</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>