force-app/main/default/objects/News_Article__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Lookup</type>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>News Articles</relationshipLabel>
    <relationshipName>News_Articles</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>