force-app/main/default/objects/News_Article__c/fields/Tournament__c.field-meta.xml
<CustomField>
    <fullName>Tournament__c</fullName>
    <label>Tournament</label>
    <type>Lookup</type>
    <referenceTo>Tournament__c</referenceTo>
    <relationshipLabel>News Articles</relationshipLabel>
    <relationshipName>News_Articles</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>